<resources>
    <string name="project_name">LegeAppen</string>
    <string name="project_http_api_uri">http://www.olejon.net/code/mdapp/</string>
    <string name="project_https_api_uri">https://www.olejon.net/code/mdapp/</string>
    <string name="project_website_uri">https://olejon.github.io/mdapp/</string>
    <string name="project_developer_website_uri">https://www.olejon.net/</string>
    <string name="project_developer_privacy_uri">https://github.com/olejon/mdapp/wiki/Personvern</string>
    <string name="project_developer_license_uri">https://www.gnu.org/licenses/gpl.html</string>
    <string name="project_developer_licenses_uri">https://github.com/olejon/mdapp/wiki/Lisenser</string>
    <string name="project_report_issue_uri">https://github.com/olejon/mdapp/issues</string>
    <string name="project_feedback_text">Send tilbakemelding</string>
    <string name="project_feedback_uri">mailto:mail@olejon.net?subject=%1$s</string>
    <string name="main_title">LegeAppen</string>
    <string name="main_search_hint">Søk…</string>
    <string name="main_medications_list_empty">Ingen resultater</string>
    <string name="main_substances_list_empty">Ingen resultater</string>
    <string name="main_rate_dialog_title">Liker du appen?</string>
    <string name="main_rate_dialog_message">Dersom du liker LegeAppen, vær vennlig å gi en vurdering på Google Play.</string>
    <string name="main_rate_dialog_positive_button">Gi vurdering</string>
    <string name="main_rate_dialog_negative_button">Nei takk</string>
    <string name="main_donate_dialog_title">Støtt appen</string>
    <string name="main_donate_dialog_message">Liker du LegeAppen? I så fall hadde det vært fint om du kunne vurdere å donere en liten sum for å støtte utviklingen av appen.\n\nDu kan enkelt donere rett i appen med bare noen få trykk.\n\nDu kan også donere senere ved å åpne sidemenyen, skrolle ned og velge Doner.\n\nLegeAppen er ikke-kommersiell og er fri programvare med åpen kildekode.</string>
    <string name="main_donate_dialog_positive_button">Doner</string>
    <string name="main_donate_dialog_negative_button">Nei takk</string>
    <string name="main_menu_scan_barcode">Skann strekkode</string>
    <string name="main_menu_donate">Doner</string>
    <string name="main_menu_settings">Innstillinger</string>
    <string name="main_decompressing_new_database">Dekomprimerer ny database…</string>
    <string name="main_new_database_decompressed">Ny database dekomprimert. Navn: \"%1$s\". Versjon: \"%2$d\".</string>
    <string name="main_webview_toolbar_search_hint">Finn i tekst…</string>
    <string name="main_webview_find_in_text_information_dialog_title">Finn i tekst</string>
    <string name="main_webview_find_in_text_information_dialog_message">Skriv inn det du ønsker å søke etter i teksten og trykk deretter på søkeknappen på tastaturet.\n\nHvis du får flere treff, trykk Neste for å gå til neste treff.</string>
    <string name="main_webview_find_in_text_information_dialog_positive_button">OK</string>
    <string name="main_webview_find_in_text_no_results">Ingen treff</string>
    <string name="main_webview_menu_find_in_text">Tekstsøk</string>
    <string name="main_webview_menu_find_in_text_next">Neste</string>
    <string name="main_webview_menu_go_forward">Gå frem</string>
    <string name="main_webview_menu_print">Skriv ut</string>
    <string name="main_webview_menu_save_article">Lagre artikkel</string>
    <string name="main_webview_menu_reload">Oppdater</string>
    <string name="main_webview_menu_open_uri">Åpne i nettleser</string>
    <string name="main_medications_favorites_list_empty">Ingen favoritter</string>
    <string name="medication_nlh">Legemiddel…</string>
    <string name="medication_felleskatalogen">Felleskata…</string>
    <string name="medication_could_not_find_medication">Kunne ikke finne preparatet</string>
    <string name="medication_prescription_group_a">Narkotisk preparat</string>
    <string name="medication_prescription_group_b">Vanedannende preparat</string>
    <string name="medication_prescription_group_c">Reseptbelagt preparat. Reseptfrie pakninger kan være tilgjengelige.</string>
    <string name="medication_prescription_group_f">Selges uten resept. Reseptbelagte pakninger kan være tilgjengelige.</string>
    <string name="medication_favorite_saved">Preparat lagt til i favoritter</string>
    <string name="medication_favorite_removed">Preparat fjernet fra favoritter</string>
    <string name="medication_information_dialog_title">Tips</string>
    <string name="medication_information_dialog_message">For å bla mellom preparatomtale i Legemiddelhåndboka og Felleskatalogen, trykk på henholdsvis Legemiddelhåndboka eller Felleskatalogen, eller dra mellom sidene.\n\nTrykk på ikonet oppe til høyre for flere alternativer.</string>
    <string name="medication_information_dialog_positive_button">OK</string>
    <string name="medication_webview_find_in_text_information_dialog_title">Finn i tekst</string>
    <string name="medication_webview_find_in_text_information_dialog_message">Skriv inn det du ønsker å søke etter i teksten og trykk deretter på søkeknappen på tastaturet.\n\nHvis du får flere treff, trykk på forstørrelsesglasset for å gå til neste treff.</string>
    <string name="medication_webview_find_in_text_information_dialog_positive_button">OK</string>
    <string name="medication_not_connected_dialog_title">Ikke tilkoblet Internett</string>
    <string name="medication_not_connected_dialog_message">Du må være tilkoblet Internett for å laste Legemiddelhåndboka og Felleskatalogen.</string>
    <string name="saved_articles_title">Lagrede artikler</string>
    <string name="diseases_and_treatments_search_webview_menu_find_in_text">Tekstsøk</string>
    <string name="diseases_and_treatments_search_webview_menu_forward">Gå frem</string>
    <string name="diseases_and_treatments_search_webview_menu_print">Skriv ut</string>
    <string name="diseases_and_treatments_search_webview_menu_save_article">Lagre artikkel</string>
    <string name="diseases_and_treatments_search_webview_menu_reload">Oppdater</string>
    <string name="diseases_and_treatments_search_webview_menu_open_uri">Åpne i nettleser</string>
    <string name="lvh_title">Legevakthåndboken</string>
    <string name="poisonings_toolbar_search_hint">Søk på norsk…</string>
    <string name="poisonings_no_recent_searches">Ingen nylige søk</string>
    <string name="poisonings_information">Søk etter mulige årsaker til forgiftning. Eksempler: \"Maling\" eller \"Cipralex\".\n\nKildene som brukes er <i>Helsenorge.no</i> og <i>Helsebiblioteket</i>.</string>
    <string name="clinicaltrials_cards_card_status">Status:</string>
    <string name="clinicaltrials_cards_card_conditions">Tilstander:</string>
    <string name="clinicaltrials_cards_card_intervention">Intervensjoner:</string>
    <string name="clinicaltrials_cards_card_button_uri">LES MER</string>
    <string name="scales_medscape">Flere skalaer hos Medscape</string>
    <string name="scales_vas">Visual Analog Scale</string>
    <string name="scales_gcs">Glasgow Coma Scale</string>
    <string name="scales_mews">Modified Early Warning System</string>
    <string name="scales_card_button">FORSTØRR</string>
    <string name="scales_vas_image_content_description">Visual Analog Scale</string>
    <string name="scales_gcs_image_content_description">Glasgow Coma Scale</string>
    <string name="scales_mews_image_content_description">Modified Early Warning System</string>
    <string name="calculators_button">BEREGN</string>
    <string name="calculators_bmi_title">BMI</string>
    <string name="calculators_bmi_weight_hint">Vekt i kilogram</string>
    <string name="calculators_bmi_height_hint">Høyde i centimeter</string>
    <string name="calculators_waist_measurement_title">Midjemål</string>
    <string name="calculators_waist_measurement_hint">Midjemål i centimeter</string>
    <string name="calculators_corrected_qt_time_title">Korrigert QT-tid</string>
    <string name="calculators_corrected_qt_time_qt_interval_hint">Målt QT-tid i millisekunder</string>
    <string name="calculators_corrected_qt_time_rr_interval_hint">RR-intervall i millisekunder</string>
    <string name="notes_title">Notater</string>
    <string name="notes_edit_title_hint">Tittel</string>
    <string name="notes_edit_text_hint">Tekst</string>
    <string name="notes_edit_patient_id_hint">Pasient-ID (valgfri)</string>
    <string name="notes_edit_patient_name_hint">Pasientnavn (valgfri)</string>
    <string name="notes_edit_patient_doctor_hint">Ansvarlig lege (valgfri)</string>
    <string name="notes_edit_patient_department_hint">Avdeling (valgfri)</string>
    <string name="notes_edit_patient_room_hint">Romnummer (valgfri)</string>
    <string name="notes_edit_patient_add_medication">Legg til preparat</string>
    <string name="tasks_title">Oppgaver</string>
    <string name="drawer_subheader_encyclopedias">Oppslagsverk</string>
    <string name="drawer_subheader_resources">Ressurser</string>
    <string name="drawer_subheader_tools">Verktøy</string>
    <string name="drawer_subheader_other">Annet</string>
    <string name="drawer_item_saved_articles">Lagrede artikler</string>
    <string name="drawer_item_nlh">Legemiddelhåndboka</string>
    <string name="drawer_item_felleskatalogen">Felleskatalogen</string>
    <string name="drawer_item_nel">Legehåndboka</string>
    <string name="drawer_item_helsebiblioteket">Helsebiblioteket</string>
    <string name="drawer_item_tidsskriftet">Tidsskriftet</string>
    <string name="drawer_item_oncolex">Oncolex</string>
    <string name="drawer_item_brukerhandboken">Brukerhåndboken</string>
    <string name="drawer_item_analyseoversikten">Analyseoversikten</string>
    <string name="drawer_item_nhi">Norsk Helseinformatikk</string>
    <string name="drawer_item_sml">Store medisinske leksikon</string>
    <string name="drawer_item_wikipedia_norwegian">Wikipedia - Norsk</string>
    <string name="drawer_item_forskning">Forskning.no</string>
    <string name="drawer_item_helsenorge">Helsenorge.no</string>
    <string name="drawer_item_uptodate">UpToDate</string>
    <string name="drawer_item_bmj">BMJ Best Practice</string>
    <string name="drawer_item_pubmed">PubMed</string>
    <string name="drawer_item_webofscience">Web of Science</string>
    <string name="drawer_item_medlineplus">MedlinePlus</string>
    <string name="drawer_item_ao_surgery">AO Surgery Reference</string>
    <string name="drawer_item_wikipedia_english">Wikipedia - Engelsk</string>
    <string name="drawer_item_diseases_and_treatments">Sykdommer og behandlinger</string>
    <string name="drawer_item_lvh">Legevakthåndboken</string>
    <string name="drawer_item_interactions">Interaksjonsanalyse</string>
    <string name="drawer_item_poisonings">Giftinformasjonen</string>
    <string name="drawer_item_antibiotics_guides">Antibiotikaveileder</string>
    <string name="drawer_item_nasjonale_retningslinjer">Nasjonale retningslinjer</string>
    <string name="drawer_item_clinicaltrials">Kliniske studier</string>
    <string name="drawer_item_atc">ATC-register</string>
    <string name="drawer_item_icd10">ICD-10</string>
    <string name="drawer_item_manufacturers">Legemiddelfirmaer</string>
    <string name="drawer_item_pharmacies">Apotek</string>
    <string name="drawer_item_calculators">Kalkulatorer</string>
    <string name="drawer_item_scales">Skalaer</string>
    <string name="drawer_item_notifications_from_slv">Varsler fra Legemiddelverket</string>
    <string name="drawer_item_notes">Notater</string>
    <string name="drawer_item_tasks">Oppgaver</string>
    <string name="drawer_item_settings">Innstillinger</string>
    <string name="drawer_item_donate">Doner</string>
    <string name="drawer_item_feedback">Send tilbakemelding</string>
    <string name="drawer_item_report_issue">Rapporter feil</string>
</resources>