<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/main_webview_menu_find_in_text" android:orderInCategory="1" app:showAsAction="ifRoom" android:icon="@drawable/ic_search_white_24dp" android:title="@string/main_webview_menu_find_in_text"/>
    <item android:id="@+id/main_webview_menu_go_forward" android:orderInCategory="2" app:showAsAction="ifRoom" android:visible="false" android:icon="@drawable/ic_keyboard_arrow_right_white_24dp" android:title="@string/main_webview_menu_go_forward"/>
    <item android:id="@+id/main_webview_menu_print" android:orderInCategory="3" app:showAsAction="ifRoom" android:icon="@drawable/ic_print_white_24dp" android:title="@string/main_webview_menu_print"/>
    <item android:id="@+id/main_webview_menu_save_article" android:orderInCategory="4" app:showAsAction="never" android:title="@string/main_webview_menu_save_article"/>
    <item android:id="@+id/main_webview_menu_open_uri" android:orderInCategory="5" app:showAsAction="never" android:title="@string/main_webview_menu_open_uri"/>

</menu>