<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/clinicaltrials_cards_card" style="@style/clinicaltrials_cards_card_layout">
	<LinearLayout style="@style/clinicaltrials_cards_card_inner_layout">
		<TextView android:id="@+id/clinicaltrials_cards_card_title" style="@style/clinicaltrials_cards_card_title"/>
		<TextView android:text="@string/clinicaltrials_cards_card_status" style="@style/clinicaltrials_cards_card_detail_title"/>
		<TextView android:id="@+id/clinicaltrials_cards_card_status" style="@style/clinicaltrials_cards_card_detail"/>
		<TextView android:text="@string/clinicaltrials_cards_card_conditions" style="@style/clinicaltrials_cards_card_detail_title"/>
		<TextView android:id="@+id/clinicaltrials_cards_card_conditions" style="@style/clinicaltrials_cards_card_detail"/>
		<TextView android:text="@string/clinicaltrials_cards_card_intervention" style="@style/clinicaltrials_cards_card_detail_title"/>
		<TextView android:id="@+id/clinicaltrials_cards_card_intervention" style="@style/clinicaltrials_cards_card_detail"/>
		<View style="@style/clinicaltrials_cards_card_separator"/>
		<TextView android:id="@+id/clinicaltrials_cards_card_button_uri" android:text="@string/clinicaltrials_cards_card_button_uri" style="@style/clinicaltrials_cards_card_button"/>
	</LinearLayout>
</android.support.v7.widget.CardView>