<?xml version="1.0" encoding="utf-8"?>

<shortcuts xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut android:shortcutId="saved_articles" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/saved_articles_title" tools:ignore="UnusedAttribute">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="net.olejon.mdapp" android:targetClass="net.olejon.mdapp.SavedArticlesActivity"/>
    </shortcut>

    <shortcut android:shortcutId="lvh" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/lvh_title" tools:ignore="UnusedAttribute">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="net.olejon.mdapp" android:targetClass="net.olejon.mdapp.LvhActivity"/>
    </shortcut>

    <shortcut android:shortcutId="notes" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/notes_title" tools:ignore="UnusedAttribute">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="net.olejon.mdapp" android:targetClass="net.olejon.mdapp.NotesActivity"/>
    </shortcut>

    <shortcut android:shortcutId="tasks" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/tasks_title" tools:ignore="UnusedAttribute">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="net.olejon.mdapp" android:targetClass="net.olejon.mdapp.TasksActivity"/>
    </shortcut>

</shortcuts>