<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" style="@style/layout_match_width_match_height">
	<android.support.v7.widget.Toolbar android:id="@+id/poisonings_toolbar" android:layout_alignParentTop="true" style="@style/toolbar">
		<EditText android:id="@+id/poisonings_toolbar_search" android:hint="@string/poisonings_toolbar_search_hint" style="@style/poisonings_toolbar_search_edittext" tools:ignore="Autofill"/>
	</android.support.v7.widget.Toolbar>
	<ListView android:id="@+id/poisonings_list" android:layout_below="@+id/poisonings_toolbar" style="@style/layout_match_width_match_height"/>
	<ScrollView android:id="@+id/poisonings_list_empty" android:layout_below="@+id/poisonings_toolbar" style="@style/layout_match_width_match_height_vertical_scrollbar">
		<LinearLayout style="@style/list_empty_layout">
			<TextView android:text="@string/poisonings_no_recent_searches" style="@style/list_title_empty"/>
			<TextView android:text="@string/poisonings_information" style="@style/list_information_empty"/>
		</LinearLayout>
	</ScrollView>
	<android.support.design.widget.FloatingActionButton android:id="@+id/poisonings_fab" android:layout_alignParentEnd="true" android:layout_alignParentBottom="true" android:src="@drawable/ic_search_white_24dp" style="@style/fab_layout"/>
</RelativeLayout>